# opencryptui

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ci_test.sh
.github/workflows/: build-and-release.yml
include/: chacha20.h  cryptoprovider.h  customlistwidget.h  encryptionengine.h  encryptionengine_diskops.h  encryptionworker.h  mainwindow.h
include/logging/: secure_logger.h
installation/: linux.md  osx.md  windows.md
resources/: darktheme.qss  lighttheme.qss  resources.qrc
scripts/: generate_version_header.py  run_tests.bat  run_tests.sh  run_tests_mac.sh
src/: argon2provider.cpp  chacha20.cpp  customlistwidget.cpp  customlistwidget.h  encryptionengine.cpp  encryptionengine.h  encryptionengine_benchmark.cpp  encryptionengine_chacha20.cpp  encryptionengine_crypto.cpp  encryptionengine_disk.cpp  encryptionengine_diskops.cpp  encryptionengine_fileops.cpp  encryptionengine_init.cpp  encryptionengine_keyderivation.cpp  encryptionengine_securewipe.cpp  encryptionengine_security.cpp  encryptionengine_tamperevidence.cpp  encryptionworker.cpp  encryptionworker.h  libsodiumprovider.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_disk.cpp  mainwindow_entropy.cpp  opensslprovider.cpp
src/logging/: secure_logger.cpp
tests/: main.cpp  test_encryption_app.cpp  test_encryption_app.h
ui/: mainwindow.ui
